# EDAMI

./: CMakeLists.txt  download-datasets.sh  people.txt
include/: Attribute.h  AverageGranuleSizeSequenceGenerator.h  AverageSizeStrategy.h  ClassificationInfo.h  ClassificationQuality.h  Classifier.h  ConfusionMatrix.h  CoveringFindingStrategy.h  CrossValidation.h  CrossValidationData.h  Dataset.h  DatasetInfo.h  DatasetInfoProvider.h  FileWriter.h  GranularReflectionCreator.h  GranuleCalculator.h  GranuleSet.h  GranuleSizeStrategy.h  LeaveOneOutValidation.h  MaximalSizeStrategy.h  MinimalSizeStrategy.h  NormalizationParams.h  NumberStats.h  SimpleCrossValidation.h  SimpleDataset.h  SimpleGranuleSet.h
src/: Attribute.cpp  AverageGranuleSizeSequenceGenerator.cpp  AverageSizeStrategy.cpp  CMakeLists.txt  ClassificationInfo.cpp  ClassificationQuality.cpp  Classifier.cpp  ConfusionMatrix.cpp  CrossValidation.cpp  Dataset.cpp  DatasetInfo.cpp  DatasetInfoProvider.cpp  FileWriter.cpp  GranularReflectionCreator.cpp  GranuleCalculator.cpp  GranuleSet.cpp  GranuleSizeStrategy.cpp  LeaveOneOutValidation.cpp  MaximalSizeStrategy.cpp  MinimalSizeStrategy.cpp  NormalizationParams.cpp  NumberStats.cpp  SimpleCrossValidation.cpp  SimpleDataset.cpp  SimpleGranuleSet.cpp  main.cpp
